Fixed menu top section bug with z-index

--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -74,6 +74,7 @@ nav {
 .menu-list {
   width: 300px;
   height: 100vh;
+  z-index: 99;
   position: fixed;
   top: 0;
   right: 0;
